Making the build work out of the box